# ethereum_coursework_f25

./: .gitignore  LICENSE  README.md
example/: main.py  pyproject.toml
example/page/: index.html
frontend/: package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.css  App.tsx  background.ts  contentScript.ts  inpage.ts
frontend/src/abi/: UserStorage.ts
frontend/src/components/: CredentialsTab.tsx  GasEstimateModal.tsx  StatusBar.tsx  TokensTab.tsx  VaultManagement.tsx  VaultSettingsTab.tsx  WalletConnection.tsx
frontend/src/config/: constants.ts
frontend/src/hooks/: useCredentials.ts  useVault.ts  useWallet.ts
frontend/src/services/: VaultService.ts
frontend/src/types/: browser.d.ts
frontend/src/utils/: crypto.ts  jwt.ts  wallet.ts
on_chain/: README.md
on_chain/src/: UserVault.sol
python_sdk/: .gitignore  pyproject.toml
python_sdk/eth_oauth/: __init__.py  blockchain.py  crypto.py  jwt_verifier.py
